add_subdirectory(single_thread_server)
add_subdirectory(multi_thread_server)
add_subdirectory(number_prime_tcp_server)
add_subdirectory(square_root_server)
add_subdirectory(prog_launch_server)
add_subdirectory(multi_thread_launch_server)
add_subdirectory(simple_http_tcp_server)
add_subdirectory(pract03_tcp_server)
add_subdirectory(pract01_nslook)
